--- a/desktop/css/nav-dropdown.css
+++ b/desktop/css/nav-dropdown.css
@@ -5,14 +5,16 @@ nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
-  background: #1bc2a2;
+  background: white;
 }
 
 nav ul li {
   display: block;
   position: relative;
   float: left;
-  background: #1bc2a2;
+  border: 1px solid;
+  box-shadow: 5px 10px;
+  background: white;
 }
 
 /* This hides the dropdowns */
@@ -23,13 +25,19 @@ nav li ul { display: none; }
 nav ul li a {
   display: block;
   padding: 1em;
+  font-size: 25px;
+  align-content: center;
+  margin: auto;
+  text-shadow: #121212;
   text-decoration: none;
   white-space: nowrap;
-  color: #fff;
+  color: black;
 }
 
 nav ul li a:hover { 
-  background: #2c3e50 !important; 
+  background: #9db7d1 !important;
+  border: 1px solid;
+  border-color: coral;
 }
 
 /* Display the dropdown */
@@ -42,7 +50,7 @@ nav li:hover > ul {
 
 nav li:hover li { float: none; }
 
-nav li:hover a { background: #1bc2a2; }
+nav li:hover a { background: white; }
 
 nav li:hover li a:hover { background: #2c3e50; }
 
