--- a/mobile/css/nav-dropdown.css
+++ b/mobile/css/nav-dropdown.css
@@ -1,18 +1,18 @@
 /* Unoriginal CSS Block - START
  Taken from: http://www.cssscript.com/create-a-multi-level-drop-down-menu-with-pure-css/   
  */
-nav ul {
+ nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
-  background: #1bc2a2;
+  background: white;
 }
 
 nav ul li {
   display: block;
   position: relative;
   float: left;
-  background: #1bc2a2;
+  background: white;
 }
 
 /* This hides the dropdowns */
@@ -23,13 +23,17 @@ nav li ul { display: none; }
 nav ul li a {
   display: block;
   padding: 1em;
+  font-size: 25px;
+  text-shadow: #121212;
   text-decoration: none;
   white-space: nowrap;
-  color: #fff;
+  color: black;
 }
 
 nav ul li a:hover { 
-  background: #2c3e50 !important; 
+  background: #9db7d1 !important;
+  border: 1px solid;
+  border-color: coral;
 }
 
 /* Display the dropdown */
@@ -42,7 +46,7 @@ nav li:hover > ul {
 
 nav li:hover li { float: none; }
 
-nav li:hover a { background: #1bc2a2; }
+nav li:hover a { background: white; }
 
 nav li:hover li a:hover { background: #2c3e50; }
 
